--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ input[type="range"] {
 .slider-track {
   width: 100%;
   height: 5px;
-  background-color: #d5d5d5;
+  /* background-color: #d5d5d5; */
   position: absolute;
   margin: auto;
   top: 0px;
